fix overlap on video controls

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -744,6 +744,7 @@ section {
 }
 
 #hero {
+  position: relative;
   height: 100vh;
   margin: 0;
   padding: 0;
@@ -760,18 +761,20 @@ section {
   position: absolute;
   bottom: var(--space-100);
   left: var(--space-100);
-  transition: 1s all;
+  transition: 1s opacity;
   display: flex;
 }
 
 #hero-player {
+  position: relative;
   width: var(--width-element-full);
   height: var(--height-element-full);
 }
 
 #hero-player button {
-  border: none;
   background-color: transparent;
+  cursor: pointer;
+  border: none;
 }
 
 #hero-player button:before {
@@ -780,8 +783,6 @@ section {
   color: #aaa;
   text-shadow: 1px 1px 0px black;
 }
-
-
 
 #hero-player:hover .controls,
 #hero-player:focus-within .controls {
@@ -792,10 +793,17 @@ section {
   display: none;
 }
 
-#hero-container {
-  height: 100%;
-  width: 100%;
+#hero-veil {
+  z-index: 100;
+  height: 100vh;
+  width: 100vw;
+  top:0px;
+  position: absolute;
+  display: flex;
   background: var(--linear-gradient);
+}
+
+#hero-container {
   position: absolute;
   display: flex;
   justify-content: center;
